--- a/lra/lrademo/trip-manager-springboot/pom.xml
+++ b/lra/lrademo/trip-manager-springboot/pom.xml
@@ -32,7 +32,7 @@
     </parent>
     <groupId>com.example</groupId>
     <artifactId>trip-manager-sb</artifactId>
-    <version>23.4.1</version>
+    <version>1.0.0-SNAPSHOT</version>
     <name>trip-manager-sb</name>
     <description>trip-manager-sb</description>
     <properties>
