--- a/lra/lrademo/flight-springboot/pom.xml
+++ b/lra/lrademo/flight-springboot/pom.xml
@@ -26,17 +26,17 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.3</version>
+        <version>3.1.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
     <artifactId>flight-sb</artifactId>
-    <version>24.2.1</version>
+    <version>1.0.0-SNAPSHOT</version>
     <name>flight-sb</name>
     <description>flight-sb</description>
     <properties>
         <java.version>17</java.version>
-        <spring.version>3.2.3</spring.version>
+        <spring.version>3.1.2</spring.version>
     </properties>
     <dependencies>
         <dependency>
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>com.oracle.microtx.lra</groupId>
             <artifactId>microtx-lra-spring-boot-starter</artifactId>
-            <version>24.2.1</version>
+            <version>23.4.2</version>
         </dependency>
 
         <!--        If this app is running on ARM based Mac, uncomment this.-->
