--- a/lra/helmcharts/sampleappslraspring-istio-openshift/Chart.yaml
+++ b/lra/helmcharts/sampleappslraspring-istio-openshift/Chart.yaml
@@ -16,32 +16,29 @@
 # THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
 # PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF
 # CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+ 
+ 
+apiVersion: v2
+name: sampleappslra
+description: A Helm chart for MicroTx Participants
 
-# Default values for sampleappslraspring-openshift.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-# Refer readme.md file for the details
+# A chart can be either an 'application' or a 'library' chart.
+#
+# Application charts are a collection of templates that can be packaged into versioned archives
+# to be deployed.
+#
+# Library charts provide useful utilities or functions for the chart developer. They're included as
+# a dependency of application charts to inject those utilities and functions into the rendering
+# pipeline. Library charts do not define any templates and therefore cannot be deployed.
+type: application
 
-sampleappslra:
-  lraCoordinatorUrl: http://otmm-tcs.otmm.svc.cluster.local:9000/api/v1/lra-coordinator
-  tripmanager:
-    name: trip-manager
-    host: trip-manager
-    namespace: otmm
-    version: v1
-    image: lra-trip-manager:1.0
-    imagePullSecret:
-  flight:
-    name: flight
-    host: flight
-    namespace: otmm
-    version: v1
-    image: lra-flight:1.0
-    imagePullSecret:
-  hotel:
-    name: hotel
-    host: hotel
-    namespace: otmm
-    version: v1
-    image: lra-hotel:1.0
-    imagePullSecret:
+# This is the chart version. This version number should be incremented each time you make changes
+# to the chart and its templates, including the app version.
+# Versions are expected to follow Semantic Versioning (https://semver.org/)
+version: 1.0.1
+
+# This is the version number of the application being deployed. This version number should be
+# incremented each time you make changes to the application. Versions are not expected to
+# follow Semantic Versioning. They should reflect the version the application is using.
+# It is recommended to use it with quotes.
+appVersion: "1.0.1"
