--- a/xa/java/helmcharts/transfer-multiplerm/Chart.yaml
+++ b/xa/java/helmcharts/transfer-multiplerm/Chart.yaml
@@ -18,7 +18,7 @@
 # CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 apiVersion: v2
 name: transfer-multiplerm
-description: A Helm chart for Multiple resource manager demo
+description: A Helm chart for MicroTx with Multiple resource manager demo
 
 # A chart can be either an 'application' or a 'library' chart.
 #
