--- a/tcc/nodejs/flight/Dockerfile
+++ b/tcc/nodejs/flight/Dockerfile
@@ -25,7 +25,7 @@ WORKDIR /usr/src/app
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
 COPY package.json ./
-COPY tmmlib-node-1.0.0.tgz ./
+COPY oracle-microtx-1.0.0.tgz ./
 
 RUN npm install
 # If you are building your code for production
