--- a/tcc/nodejs/travel-agent/package.json
+++ b/tcc/nodejs/travel-agent/package.json
@@ -7,7 +7,7 @@
     "axios": "^1.4.0",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "tmmlib-node": "file:tmmlib-node-1.0.0.tgz"
+    "@oracle/microtx": "file:oracle-microtx-1.0.0.tgz"
   },
   "devDependencies": {
     "@types/node": "^16.11.6",
