LRA Lock Free reservation issues fix due to quotes and saga-external-coordinator-api dependency

--- a/lra/lockfree/springboot/flight-springboot/src/main/resources/application.properties
+++ b/lra/lockfree/springboot/flight-springboot/src/main/resources/application.properties
@@ -25,9 +25,9 @@ spring.microtx.lra.participant-url=http://localhost:8083
 spring.microtx.lra.headers-propagation-prefix = {x-b3-, oracle-tmm-, authorization, refresh-}
 spring.microtx.lra.lock-free-reservation-active=true
 
-departmentDataSource.url = "jdbc:oracle:thin:@tcps://<host>:<port>/<service_name>?wallet_location=Database_Wallet"
-departmentDataSource.user = "dbuser"
-departmentDataSource.password = "xxxxxx"
+departmentDataSource.url = jdbc:oracle:thin:@tcps://<host>:<port>/<service_name>?wallet_location=Database_Wallet
+departmentDataSource.user = dbuser
+departmentDataSource.password = xxxxxx
 # Properties for using Universal Connection Pool (UCP)
 # Note: These properties require JDBC version 21.0.0.0
 departmentDataSource.oracleucp.driver-class-name = oracle.jdbc.OracleDriver
