--- a/lra/lockfree/springboot/trip-manager-springboot/src/main/resources/application.properties
+++ b/lra/lockfree/springboot/trip-manager-springboot/src/main/resources/application.properties
@@ -28,9 +28,9 @@ spring.microtx.lra.lock-free-reservation-active=true
 hotel.service.url = http://localhost:8082/hotelService/api/hotel
 flight.service.url = http://localhost:8083/flightService/api/flight
 
-departmentDataSource.url = "jdbc:oracle:thin:@tcps://<host>:<port>/<service_name>?wallet_location=Database_Wallet"
-departmentDataSource.user = "dbuser"
-departmentDataSource.password = "xxxxxx"
+#departmentDataSource.url = jdbc:oracle:thin:@tcps://<host>:<port>/<service_name>?wallet_location=Database_Wallet
+#departmentDataSource.user = dbuser
+#departmentDataSource.password = xxxxxx
 # Properties for using Universal Connection Pool (UCP)
 # Note: These properties require JDBC version 21.0.0.0
 departmentDataSource.oracleucp.driver-class-name = oracle.jdbc.OracleDriver
