--- a/xa/java/teller-spring-promotion-jpa/pom.xml
+++ b/xa/java/teller-spring-promotion-jpa/pom.xml
@@ -47,7 +47,18 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.hibernate.orm</groupId>
+                    <artifactId>hibernate-core</artifactId>
+                </exclusion>
+            </exclusions>
             <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.2.9.Final</version>
         </dependency>
         <dependency>
             <groupId>com.oracle.microtx</groupId>
