Fix for LRA micronaut HTTP Client error

--- a/lra/lrademo/micronaut/trip-manager-micronaut/pom.xml
+++ b/lra/lrademo/micronaut/trip-manager-micronaut/pom.xml
@@ -97,11 +97,6 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
             <groupId>io.micronaut</groupId>
             <artifactId>micronaut-context</artifactId>
             <version>${micronaut.version}</version>
@@ -110,6 +105,11 @@
             <groupId>io.micronaut</groupId>
             <artifactId>micronaut-inject</artifactId>
             <version>${micronaut.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
