--- a/lra/lrademo/micronaut/trip-manager-micronaut/src/main/resources/application.properties
+++ b/lra/lrademo/micronaut/trip-manager-micronaut/src/main/resources/application.properties
@@ -29,3 +29,13 @@ microtx.lra.headers-propagation-prefix = x-b3-,oracle-tmm-,authorization,refresh
 hotel.service.url = http://localhost:8082/hotelService/api/hotel
 flight.service.url = http://localhost:8083/flightService/api/flight
 
+#Server configuration
+micronaut.server.netty.parent.threads=100
+micronaut.server.netty.worker.threads=50
+
+#HttpClient configuration
+micronaut.http.client.pool.enabled=true
+micronaut.http.client.pool.max-concurrent-http1-connections=2048
+
+# Micronaut outbound Http client configuration
+micronaut.http.services.microTxOutboundClient.read-timeout=60s
