--- a/lra/lrademo/micronaut/flight-micronaut/pom.xml
+++ b/lra/lrademo/micronaut/flight-micronaut/pom.xml
@@ -96,8 +96,8 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
             <scope>runtime</scope>
         </dependency>
         <dependency>
