--- a/lra/docker-compose/tmm-stack-compose.yaml
+++ b/lra/docker-compose/tmm-stack-compose.yaml
@@ -67,6 +67,9 @@ services:
       ### MicroTx Springboot lib specific env
       SPRING_MICROTX_LRA_COORDINATOR_URL: "http://otmm-tcs:9000/api/v1/lra-coordinator"
       SPRING_MICROTX_LRA_PARTICIPANT_URL: "http://hotel:8082"
+      ### MicroTx Micronaut lib specific env
+      MICROTX_LRA_COORDINATOR_URL: "http://otmm-tcs:9000/api/v1/lra-coordinator"
+      MICROTX_LRA_PARTICIPANT_URL: "http://hotel:8082"
 
   flight:
     image: "127.0.0.1:5000/flight:1.0"
@@ -81,6 +84,10 @@ services:
       ### MicroTx Springboot lib specific env
       SPRING_MICROTX_LRA_COORDINATOR_URL: "http://otmm-tcs:9000/api/v1/lra-coordinator"
       SPRING_MICROTX_LRA_PARTICIPANT_URL: "http://flight:8083"
+      ### MicroTx Micronaut lib specific env
+      MICROTX_LRA_COORDINATOR_URL: "http://otmm-tcs:9000/api/v1/lra-coordinator"
+      MICROTX_LRA_PARTICIPANT_URL: "http://flight:8083"
+
 
   trip-manager:
     image: "127.0.0.1:5000/trip-manager:1.0"
@@ -98,3 +105,6 @@ services:
       ### MicroTx Springboot lib specific env
       SPRING_MICROTX_LRA_COORDINATOR_URL: "http://otmm-tcs:9000/api/v1/lra-coordinator"
       SPRING_MICROTX_LRA_PARTICIPANT_URL: "http://trip-manager:8081"
+      ### MicroTx Micronaut lib specific env
+      MICROTX_LRA_COORDINATOR_URL: "http://otmm-tcs:9000/api/v1/lra-coordinator"
+      MICROTX_LRA_PARTICIPANT_URL: "http://trip-manager:8081"
