Add properties for enabling logs in node.js samples

--- a/tcc/nodejs/flight/tmm.properties
+++ b/tcc/nodejs/flight/tmm.properties
@@ -21,3 +21,7 @@ oracle.tmm.TcsUrl = http://127.0.0.1:9000/api/v1
 
 # If the TCS running inside the docker container with network setting as { --add-host host.docker.internal:host-gateway }, then the call back URL will get changed as http://host.docker.internal:{server.port}
 oracle.tmm.CallbackUrl = http://localhost:{server.port}
+
+# Enable MicroTx debug logs
+oracle.tmm.EnableDebugLogs=true
+oracle.tmm.enableLogTimestamp=true
