--- a/xa/nodejs/department/tmm.properties
+++ b/xa/nodejs/department/tmm.properties
@@ -23,4 +23,8 @@ oracle.tmm.CallbackUrl = http://localhost:{server.port}/accounts
 # Resource Manager is RAC. Set this flag to true while using Oracle RAC databases
 oracle.tmm.xa.RACSupport=false
 # Resource Manager(RM) Unique Id. Make sure to replace the id value with the RM used in the application
-oracle.tmm.xa.Rmid = 99FED64F-1C96-479A-AC77-4D782FC2BD11
+oracle.tmm.xa.Rmid = DEPT1-NODE-ORACLE-RM
+
+# Enable MicroTx debug logs
+oracle.tmm.EnableDebugLogs=true
+oracle.tmm.enableLogTimestamp=true
