--- a/xa/nodejs/teller/tmm.properties
+++ b/xa/nodejs/teller/tmm.properties
@@ -21,3 +21,7 @@ oracle.tmm.TcsUrl = http://localhost:9000/api/v1
 oracle.tmm.TcsConnPoolSize = 15
 oracle.tmm.CallbackUrl = http://localhost:{server.port}
 oracle.tmm.TransactionTimeout = 60000
+
+# Enable MicroTx debug logs
+oracle.tmm.EnableDebugLogs=true
+oracle.tmm.enableLogTimestamp=true
