--- a/lra/lrademo/flight/tmm.properties
+++ b/lra/lrademo/flight/tmm.properties
@@ -20,3 +20,7 @@ server.port = 8083
 oracle.tmm.TcsUrl = http://127.0.0.1:9000/api/v1
 oracle.tmm.TcsConnPoolSize = 15
 oracle.tmm.CallbackUrl = http://localhost:{server.port}
+
+# Enable MicroTx debug logs
+oracle.tmm.EnableDebugLogs=true
+oracle.tmm.enableLogTimestamp=true
