--- a/tcc/nodejs/travel-agent/tmm.properties
+++ b/tcc/nodejs/travel-agent/tmm.properties
@@ -19,3 +19,7 @@
 server.port = 8080
 oracle.tmm.TcsUrl = http://127.0.0.1:9000/api/v1
 oracle.tmm.CallbackUrl = http://localhost:{server.port}
+
+# Enable MicroTx debug logs
+oracle.tmm.EnableDebugLogs=true
+oracle.tmm.enableLogTimestamp=true
