In K8s environment the transaction token header key is propogating in lower case. Added the logic to

--- a/lra/lrademo/hotel/src/main/resources/application.yaml
+++ b/lra/lrademo/hotel/src/main/resources/application.yaml
@@ -24,4 +24,4 @@ mp.lra:
   coordinator.url: http://localhost:9000/api/v1/lra-coordinator
   propagation.active: true
   participant.url: http://localhost:8082
-  coordinator.headers-propagation.prefix: ["x-b3-", "oracle-tmm-", "authorization", "refresh-"]
+  coordinator.headers-propagation.prefix: ["x-b3-", "oracle-tmm-", "authorization", "refresh-","Oracle-Tmm-"]
