--- a/lra/lrademo/trip-manager/src/main/resources/application.yaml
+++ b/lra/lrademo/trip-manager/src/main/resources/application.yaml
@@ -25,7 +25,7 @@ mp.lra:
   coordinator.url: http://localhost:9000/api/v1/lra-coordinator
   propagation.active: true
   participant.url: http://localhost:8081
-  coordinator.headers-propagation.prefix: ["x-b3-", "oracle-tmm-", "authorization", "refresh-"]
+  coordinator.headers-propagation.prefix: ["x-b3-", "oracle-tmm-", "authorization", "refresh-","Oracle-Tmm-"]
 
 hotel.service.url: http://localhost:8082/hotelService/api/hotel
 flight.service.url: http://localhost:8083/flightService/api/flight
