--- a/lra/lrademo/flight/package.json
+++ b/lra/lrademo/flight/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.18.2",
-    "@oracle/microtx": "file:oracle-microtx-24.2.1.tgz",
+    "@oracle/microtx": "^24.2.2",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
