--- a/xa/nodejs/department/package.json
+++ b/xa/nodejs/department/package.json
@@ -8,7 +8,7 @@
     "axios": "^1.4.0",
     "express": "^4.18.2",
     "oracledb": "^6.1.0",
-    "@oracle/microtx": "file:oracle-microtx-24.2.1.tgz"
+    "@oracle/microtx": "^24.2.2"
   },
   "devDependencies": {
     "@types/node": "^16.11.6",
