--- a/lra/lockfree/springboot/flight-springboot/pom.xml
+++ b/lra/lockfree/springboot/flight-springboot/pom.xml
@@ -30,10 +30,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>flight-sb</artifactId>
+    <artifactId>lockfree-flight-sb</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>flight-sb</name>
-    <description>flight-sb</description>
+    <name>lockfree-flight-sb</name>
+    <description>lockfree-flight-sb</description>
     <properties>
         <java.version>17</java.version>
         <spring.version>3.2.3</spring.version>
