--- a/lra/lockfree/springboot/hotel-springboot/pom.xml
+++ b/lra/lockfree/springboot/hotel-springboot/pom.xml
@@ -31,9 +31,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>hotel-sb</artifactId>
+    <artifactId>lockfree-hotel-sb</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>hotel-sb</name>
+    <name>lockfree-hotel-sb</name>
     <description>hotel-sb</description>
     <properties>
         <java.version>17</java.version>
