--- a/lra/helmcharts/sampleappslra/values.yaml
+++ b/lra/helmcharts/sampleappslra/values.yaml
@@ -26,6 +26,7 @@ sampleappslra:
     gatewayUriPrefix: /trip-service
     rewriteUriPrefix: /trip-service
     destinationHost: trip-manager
+    sessionAffinity: false
   flight:
     name: flight
     host: flight
@@ -35,6 +36,7 @@ sampleappslra:
     gatewayUriPrefix: /flightService
     rewriteUriPrefix: /flightService
     destinationHost: flight
+    sessionAffinity: false
   hotel:
     name: hotel
     host: hotel
@@ -44,3 +46,4 @@ sampleappslra:
     gatewayUriPrefix: /hotelService
     rewriteUriPrefix: /hotelService
     destinationHost: hotel
+    sessionAffinity: false
