--- a/lra/helmcharts/sampleappslraspring-istio-openshift/templates/networking.yaml
+++ b/lra/helmcharts/sampleappslraspring-istio-openshift/templates/networking.yaml
@@ -62,6 +62,11 @@ spec:
   trafficPolicy:
     tls:
       mode: ISTIO_MUTUAL
+  {{- if $val.sessionAffinity }}
+    loadBalancer:
+      consistentHash:
+        httpHeaderName: oracle-tmm-txn-id
+  {{- end }}
   subsets:
     - name: {{ $val.version }}
       labels:
