--- a/lra/helmcharts/sampleappslraspring-istio-openshift/values.yaml
+++ b/lra/helmcharts/sampleappslraspring-istio-openshift/values.yaml
@@ -33,6 +33,7 @@ sampleappslra:
     gatewayUriPrefix: /trip-service
     rewriteUriPrefix: /trip-service
     destinationHost: trip-manager
+    sessionAffinity: false
   flight:
     name: flight
     host: flight
@@ -43,6 +44,7 @@ sampleappslra:
     gatewayUriPrefix: /flightService
     rewriteUriPrefix: /flightService
     destinationHost: flight
+    sessionAffinity: false
   hotel:
     name: hotel
     host: hotel
@@ -53,3 +55,4 @@ sampleappslra:
     gatewayUriPrefix: /hotelService
     rewriteUriPrefix: /hotelService
     destinationHost: hotel
+    sessionAffinity: false
