MTRM-1879 : OpenFeign client support for LRA samples

--- a/lra/lrademo/trip-manager-springboot/src/main/resources/application.properties
+++ b/lra/lrademo/trip-manager-springboot/src/main/resources/application.properties
@@ -27,8 +27,9 @@ spring.microtx.lra.headers-propagation-prefix = {x-b3-, oracle-tmm-, authorizati
 hotel.service.url = http://localhost:8082/hotelService/api/hotel
 flight.service.url = http://localhost:8083/flightService/api/flight
 
+#Feign Client Interceptor can also be configured using configuration. In that case there is no need to specify the interceptor in the configuration attribute of the FeignClient annotation.
+
 hotel.service.name = hotel-service
 flight.service.name = flight-service
-
-#spring.cloud.openfeign.client.config.hotel-service.request-interceptors[0]= com.oracle.microtx.springboot.lra.clientinterceptor.MicroTxLRAFeignClientInterceptor
-#spring.cloud.openfeign.client.config.flight-service.request-interceptors[0]= com.oracle.microtx.springboot.lra.clientinterceptor.MicroTxLRAFeignClientInterceptor
+#spring.cloud.openfeign.client.config.hotel-service.request-interceptors[0]= com.oracle.microtx.springboot.lra.clientinterceptor.MicroTxLRAFeignClientInterceptorConfig
+#spring.cloud.openfeign.client.config.flight-service.request-interceptors[0]= com.oracle.microtx.springboot.lra.clientinterceptor.MicroTxLRAFeignClientInterceptorConfig
