--- a/xa/java/teller-spring-promotion-jpa-eclipselink/pom.xml
+++ b/xa/java/teller-spring-promotion-jpa-eclipselink/pom.xml
@@ -31,7 +31,7 @@
     </parent>
     <groupId>com.oracle.mtm.sample</groupId>
     <artifactId>teller-spring-promotion-jpa-eclipselink</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>24.2.2</version>
     <name>teller-spring-promotion-jpa-eclipselink</name>
     <description>Demo springboot project for Microservice Transaction Management teller transaction promotion application</description>
     <properties>
@@ -72,7 +72,7 @@
         <dependency>
             <groupId>com.oracle.microtx</groupId>
             <artifactId>microtx-spring-boot-starter-eclipselink</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>24.2.2</version>
         </dependency>
         <dependency>
             <groupId>io.swagger.core.v3</groupId>
