--- a/others/blogs/complexity/Blog02/LRA/department2/pom.xml
+++ b/others/blogs/complexity/Blog02/LRA/department2/pom.xml
@@ -30,7 +30,7 @@
 	</parent>
 	<groupId>com.oracle.example</groupId>
 	<artifactId>department2</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>24.2.2</version>
 	<name>department2</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>com.oracle.microtx.lra</groupId>
 			<artifactId>microtx-lra-spring-boot-starter</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>24.2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
