--- a/others/blogs/complexity/Blog03/XA/teller/pom.xml
+++ b/others/blogs/complexity/Blog03/XA/teller/pom.xml
@@ -30,7 +30,7 @@
 	</parent>
 	<groupId>com.oracle.example</groupId>
 	<artifactId>teller</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>24.2.2</version>
 	<name>teller</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>com.oracle.microtx</groupId>
 			<artifactId>microtx-spring-boot-starter</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>24.2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
