--- a/tcc/java/hotel-booking/pom.xml
+++ b/tcc/java/hotel-booking/pom.xml
@@ -32,7 +32,7 @@
     </parent>
     <groupId>com.oracle</groupId>
     <artifactId>hotel-booking</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>24.2.2</version>
     <properties>
         <mpVersion>3.3</mpVersion>
         <maven.compiler.target>11</maven.compiler.target>
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>com.oracle.microtx</groupId>
             <artifactId>TmmLib-jakarta</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>24.2.2</version>
         </dependency>
     </dependencies>
     <build>
