--- a/tcc/java/trip-client/pom.xml
+++ b/tcc/java/trip-client/pom.xml
@@ -34,7 +34,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>trip-client</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>24.2.2</version>
     <name>trip-client</name>
     <description>TMM TCC Demo Trip Client</description>
 
