--- a/xa/java/teller-spring-promotion-jpa/pom.xml
+++ b/xa/java/teller-spring-promotion-jpa/pom.xml
@@ -31,7 +31,7 @@
     </parent>
     <groupId>com.example</groupId>
     <artifactId>teller-spring-promotion-jpa</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>24.2.2</version>
     <name>teller-spring-promotion-jpa</name>
     <description>teller-spring-promotion</description>
     <properties>
@@ -47,12 +47,23 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.hibernate.orm</groupId>
+                    <artifactId>hibernate-core</artifactId>
+                </exclusion>
+            </exclusions>
             <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.2.9.Final</version>
         </dependency>
         <dependency>
             <groupId>com.oracle.microtx</groupId>
             <artifactId>microtx-spring-boot-starter-hibernate</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>24.2.2</version>
         </dependency>
         <dependency>
             <groupId>io.swagger.core.v3</groupId>
