--- a/xa/java/teller-spring-promotion/pom.xml
+++ b/xa/java/teller-spring-promotion/pom.xml
@@ -31,7 +31,7 @@
     </parent>
     <groupId>com.example</groupId>
     <artifactId>teller-spring-promotion</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>24.2.2</version>
     <name>teller-spring-promotion</name>
     <description>teller-spring-promotion</description>
     <properties>
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>com.oracle.microtx</groupId>
             <artifactId>microtx-spring-boot-starter</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>24.2.2</version>
         </dependency>
         <dependency>
             <groupId>io.swagger.core.v3</groupId>
