--- a/lra/azure/spring-tripmanager-microservices/pom.xml
+++ b/lra/azure/spring-tripmanager-microservices/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.7</version>
+        <version>3.0.1</version>
     </parent>
 
     <groupId>com.example</groupId>
@@ -17,17 +17,12 @@
 
     <properties>
         <java.version>17</java.version>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <spring.version>3.0.7</spring.version>
+        <!-- <assertj.version>3.17.1</assertj.version> -->
+        <spring.version>3.0.1</spring.version>
 
         <spring-cloud.version>2022.0.0</spring-cloud.version>
-        <chaos-monkey-spring-boot.version>3.1.0</chaos-monkey-spring-boot.version>
+        <chaos-monkey-spring-boot.version>2.3.10</chaos-monkey-spring-boot.version>
         <jolokia-core.version>1.7.1</jolokia-core.version>
-
-        <!-- Workaround for resolving the issue while using the provided lombok dependency in upgraded Java version.
-        Should be removed while future upgrading-->
-        <lombok.version>1.18.30</lombok.version>
 
         <docker.image.prefix>springcommunity</docker.image.prefix>
         <docker.image.exposed.port>9090</docker.image.exposed.port>
@@ -73,11 +68,6 @@
                 <groupId>org.jolokia</groupId>
                 <artifactId>jolokia-core</artifactId>
                 <version>${jolokia-core.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <version>${lombok.version}</version>
             </dependency>
             <!-- <dependency>
                 <groupId>org.assertj</groupId>
@@ -133,7 +123,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-release-plugin</artifactId>
-                        <version>${spring.version}</version>
+                        <version>3.0.1</version>
                         <configuration>
                             <tagNameFormat>v@{project.version}</tagNameFormat>
                         </configuration>
