--- a/lra/azure/spring-tripmanager-microservices/spring-tripmanager-trip-service/src/main/resources/application.yml
+++ b/lra/azure/spring-tripmanager-microservices/spring-tripmanager-trip-service/src/main/resources/application.yml
@@ -18,6 +18,16 @@
 # CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
 
+#server.port=8081
+#
+#spring.microtx.lra.coordinator-url=http://localhost:9000/api/v1/lra-coordinator
+#spring.microtx.lra.propagation-active=true
+#spring.microtx.lra.participant-url=http://localhost:8081
+#spring.microtx.lra.headers-propagation-prefix = {x-b3-, oracle-tmm-, authorization, refresh-}
+#
+#hotel.service.url = http://localhost:8082/hotelService/api/hotel
+#flight.service.url = http://localhost:8083/flightService/api/flight
+
 server:
   port: 8081
 
