--- a/xa/java/department-spring-jpa-eclipselink/pom.xml
+++ b/xa/java/department-spring-jpa-eclipselink/pom.xml
@@ -64,21 +64,31 @@
 			<artifactId>org.eclipse.persistence.jpa</artifactId>
 			<version>4.0.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.oracle.microtx</groupId>
+			<artifactId>microtx-spring-boot-starter</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.oracle.microtx</groupId>
 			<artifactId>microtx-spring-boot-starter-eclipselink</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+
 		<dependency>
 			<groupId>io.swagger.core.v3</groupId>
-			<artifactId>swagger-annotations</artifactId>
+			<artifactId>swagger-annotations-jakarta</artifactId>
 			<version>2.2.12</version>
 		</dependency>
+
 		<dependency>
 			<groupId>io.swagger.core.v3</groupId>
-			<artifactId>swagger-jaxrs2</artifactId>
-			<version>2.1.10</version>
+			<artifactId>swagger-jaxrs2-jakarta</artifactId>
+			<version>2.2.12</version>
 		</dependency>
+
 		<dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc8</artifactId>
