--- a/xa/java/department-spring-jpa-multiplerm-postgres/pom.xml
+++ b/xa/java/department-spring-jpa-multiplerm-postgres/pom.xml
@@ -62,7 +62,7 @@
 		</dependency>
 		<dependency>
 			<groupId>io.swagger.core.v3</groupId>
-			<artifactId>swagger-annotations</artifactId>
+			<artifactId>swagger-annotations-jakarta</artifactId>
 			<version>2.2.12</version>
 		</dependency>
 		<dependency>
@@ -100,6 +100,13 @@
 			<artifactId>osdt_cert</artifactId>
 			<version>21.3.0.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.oracle.microtx</groupId>
+			<artifactId>microtx-spring-boot-starter</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.oracle.microtx</groupId>
 			<artifactId>microtx-spring-boot-starter-hibernate</artifactId>
