--- a/xa/java/department-spring/pom.xml
+++ b/xa/java/department-spring/pom.xml
@@ -51,12 +51,13 @@
 		</dependency>
 		<dependency>
 			<groupId>io.swagger.core.v3</groupId>
-			<artifactId>swagger-annotations</artifactId>
+			<artifactId>swagger-annotations-jakarta</artifactId>
 			<version>2.2.12</version>
 		</dependency>
+
 		<dependency>
 			<groupId>io.swagger.core.v3</groupId>
-			<artifactId>swagger-jaxrs2</artifactId>
+			<artifactId>swagger-jaxrs2-jakarta</artifactId>
 			<version>2.2.12</version>
 		</dependency>
 		<dependency>
