--- a/xa/java/teller-spring-promotion-jpa/pom.xml
+++ b/xa/java/teller-spring-promotion-jpa/pom.xml
@@ -62,17 +62,22 @@
         </dependency>
         <dependency>
             <groupId>com.oracle.microtx</groupId>
+            <artifactId>microtx-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.oracle.microtx</groupId>
             <artifactId>microtx-spring-boot-starter-hibernate</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>io.swagger.core.v3</groupId>
-            <artifactId>swagger-annotations</artifactId>
+            <artifactId>swagger-annotations-jakarta</artifactId>
             <version>2.2.12</version>
         </dependency>
         <dependency>
             <groupId>io.swagger.core.v3</groupId>
-            <artifactId>swagger-jaxrs2</artifactId>
+            <artifactId>swagger-jaxrs2-jakarta</artifactId>
             <version>2.2.12</version>
         </dependency>
         <dependency>
