--- a/xa/java/department-spring-jaxrs/pom.xml
+++ b/xa/java/department-spring-jaxrs/pom.xml
@@ -31,7 +31,7 @@
 	</parent>
 	<groupId>com.oracle.mtm.sample</groupId>
 	<artifactId>department-spring</artifactId>
-	<version>24.2.2</version>
+	<version>1.0-SNAPSHOT</version>
 	<name>department-spring</name>
 	<description>Demo springboot project for Microservice Transaction Management participant application</description>
 	<properties>
