--- a/xa/java/department-spring-jpa-multiplerm-postgres/pom.xml
+++ b/xa/java/department-spring-jpa-multiplerm-postgres/pom.xml
@@ -67,7 +67,7 @@
 		</dependency>
 		<dependency>
 			<groupId>io.swagger.core.v3</groupId>
-			<artifactId>swagger-jaxrs2</artifactId>
+			<artifactId>swagger-jaxrs2-jakarta</artifactId>
 			<version>2.2.12</version>
 		</dependency>
 		<dependency>
