add xa transaction timeout in helm chart.

--- a/xa/java/helmcharts/transfer/templates/sampleapps.yaml
+++ b/xa/java/helmcharts/transfer/templates/sampleapps.yaml
@@ -234,6 +234,8 @@ spec:
               value: teller
             - name: ORACLE_TMM_PROPAGATE_TRACE_HEADERS
               value: {{ .Values.sampleapps.teller.propagateTraceHeader| quote }}
+            - name: ORACLE_TMM_TRANSACTION_TIMEOUT
+              value: { { .Values.sampleapps.teller.xaTransactionTimeout| quote } }
       imagePullSecrets:
         - name: {{ .Values.sampleapps.teller.imagePullSecret }}
 ---
