Added Snapshot version

--- a/lra/azure/spring-tripmanager-microservices/pom.xml
+++ b/lra/azure/spring-tripmanager-microservices/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>com.example</groupId>
     <artifactId>spring-tripmanager-service</artifactId>
-    <version>24.2.2</version>
+    <version>1.0-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <packaging>pom</packaging>
 
@@ -50,7 +50,7 @@
             <dependency>
                 <groupId>com.oracle.microtx.lra</groupId>
                 <artifactId>microtx-lra-spring-boot-starter</artifactId>
-                <version>24.2.1</version>
+                <version>1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
