--- a/lra/azure/spring-tripmanager-microservices/spring-tripmanager-api-gateway/pom.xml
+++ b/lra/azure/spring-tripmanager-microservices/spring-tripmanager-api-gateway/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>com.example</groupId>
         <artifactId>spring-tripmanager-service</artifactId>
-        <version>24.2.2</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <properties>
